--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
- <h1>This is My Fokira website </h1>
+ <h1 style="text-align: center; color:red">This is My Fokira website </h1>
     
 </body>
 </html>
