--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tamim</title>
+
+    <style>
+        div{
+            width: 50%;
+            margin: 0 auto;
+        }
+        div img{
+            width: 100%;
+        }
+    </style>
 </head>
+
 <body>
 
  <h1 style="text-align: center; color:red">This is My Fokira website </h1>
+ <div> <img src="IMG_20201214_111556.jpg " alt=""></div>
     
 </body>
 </html>
